--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Realtime Storage Application</title>
+
+  <!-- stylesheets -->
+  <link rel="stylesheet" href="./app/assets/main.css">
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,600italic,400italic,300italic' rel='stylesheet' type='text/css'>
+
+  <!-- angular includes -->
+
+  <!-- dependancies -->
+
 </head>
   <body ng-app="contactApp">
 
