Added oAuth using own system

--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
   <script src="bower_components/angular-animate/angular-animate.js"></script>
   <script src="bower_components/angular-spinkit/build/angular-spinkit.min.js"></script>
 
+  <script src="bower_components/angular-cookie/dist/angular-cookie.min.js"></script>
+  <script src="bower_components/query-string/query-string.min.js"></script>
+  <script src="bower_components/angular-oauth2/dist/angular-oauth2.min.js"></script>
+
   <!-- angular includes -->
   <script src="app/app.js"></script>
   <script src="app/controllers/loginController.js"></script>
+  <script src="app/controllers/fileController.js"></script>
 
 </head>
   <body ng-app="rtStorage">
