--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
   <link rel="stylesheet" href="bower_components/angular-spinkit/build/angular-spinkit.min.css">
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-mocks/angular-mocks.js"></script>
+  <script src="bower_components/angular-cookies/angular-cookies.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-animate/angular-animate.js"></script>
   <script src="bower_components/angular-spinkit/build/angular-spinkit.min.js"></script>
 
-  <script src="bower_components/angular-cookie/dist/angular-cookie.min.js"></script>
-  <script src="bower_components/query-string/query-string.min.js"></script>
-  <script src="bower_components/angular-oauth2/dist/angular-oauth2.min.js"></script>
-
   <!-- angular includes -->
   <script src="app/app.js"></script>
   <script src="app/controllers/loginController.js"></script>
+  <script src="app/controllers/Controller.js"></script>
   <script src="app/controllers/fileController.js"></script>
+  <script src="app/services/OAuthService.js"></script>
+
 
 </head>
   <body ng-app="rtStorage">
