Basic Google Drive file listing - using $interval to update the list

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   <script src="app/controllers/loginController.js"></script>
   <script src="app/controllers/fileController.js"></script>
   <script src="app/services/OAuthService.js"></script>
+  <script src="app/services/GDocsService.js"></script>
+
 
 
 </head>
