Added date filter

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <!-- stylesheets -->
   <link rel="stylesheet" href="./app/assets/main.css">
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,600italic,400italic,300italic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="http://i.icomoon.io/public/temp/4c90af9d7b/LizLake/style.css">
-
+  <link rel="stylesheet" href="http://i.icomoon.io/public/temp/1c7e252453/UntitledProject/style.css">
+  
   <!-- dependancies -->
   <link rel="stylesheet" href="bower_components/angular-spinkit/build/angular-spinkit.min.css">
   <script src="bower_components/angular/angular.js"></script>
@@ -24,8 +24,7 @@
   <script src="app/controllers/fileController.js"></script>
   <script src="app/services/OAuthService.js"></script>
   <script src="app/services/GDocsService.js"></script>
-
-
+  <script src="app/filters/dateFilter.js"></script>
 
 </head>
   <body ng-app="rtStorage">
