--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./app/assets/main.css">
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,600italic,400italic,300italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="http://i.icomoon.io/public/temp/1c7e252453/UntitledProject/style.css">
-  
+
   <!-- dependancies -->
   <link rel="stylesheet" href="bower_components/angular-spinkit/build/angular-spinkit.min.css">
   <script src="bower_components/angular/angular.js"></script>
@@ -17,6 +17,7 @@
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-animate/angular-animate.js"></script>
   <script src="bower_components/angular-spinkit/build/angular-spinkit.min.js"></script>
+  <script src="bower_components/angular-file-upload/angular-file-upload.js"></script>
 
   <!-- angular includes -->
   <script src="app/app.js"></script>
