--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <script src="app/app.js"></script>
   <script src="app/controllers/loginController.js"></script>
   <script src="app/controllers/fileController.js"></script>
+  <script src="app/controllers/uploadController.js"></script>
   <script src="app/services/OAuthService.js"></script>
   <script src="app/services/GDocsService.js"></script>
   <script src="app/filters/dateFilter.js"></script>
