Successfully uploading files using the correct headers for a multipart request

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
@@ -7,7 +6,7 @@
   <!-- stylesheets -->
   <link rel="stylesheet" href="./app/assets/main.css">
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,600italic,400italic,300italic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="http://i.icomoon.io/public/temp/1c7e252453/UntitledProject/style.css">
+  <!-- <link rel="stylesheet" href="http://i.icomoon.io/public/temp/1c7e252453/UntitledProject/style.css"> -->
 
   <!-- dependancies -->
   <link rel="stylesheet" href="bower_components/angular-spinkit/build/angular-spinkit.min.css">
@@ -27,6 +26,8 @@
   <script src="app/services/OAuthService.js"></script>
   <script src="app/services/GDocsService.js"></script>
   <script src="app/filters/dateFilter.js"></script>
+  <script src="app/directives/fileDirective.js"></script>
+
 
 </head>
   <body ng-app="rtStorage">
