--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- stylesheets -->
   <link rel="stylesheet" href="./app/assets/main.css">
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,600italic,400italic,300italic' rel='stylesheet' type='text/css'>
-  <!-- <link rel="stylesheet" href="http://i.icomoon.io/public/temp/1c7e252453/UntitledProject/style.css"> -->
+  <link rel="stylesheet" href="http://i.icomoon.io/public/temp/1c7e252453/UntitledProject/style.css">
 
   <!-- dependancies -->
   <link rel="stylesheet" href="bower_components/angular-spinkit/build/angular-spinkit.min.css">
