--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <script src="bower_components/angular-animate/angular-animate.js"></script>
   <script src="bower_components/angular-spinkit/build/angular-spinkit.min.js"></script>
   <script src="bower_components/angular-file-upload/angular-file-upload.js"></script>
+  <link rel='stylesheet' href='bower_components/angular-loading-bar/build/loading-bar.min.css' type='text/css' media='all' />
+  <script type='text/javascript' src='bower_components/angular-loading-bar/build/loading-bar.min.js'></script>
 
   <!-- angular includes -->
   <script src="app/app.js"></script>
