--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- stylesheets -->
   <link rel="stylesheet" href="./app/assets/main.css">
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,600italic,400italic,300italic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="http://i.icomoon.io/public/temp/1c7e252453/UntitledProject/style.css">
+  <link rel="stylesheet" href="./app/assets/fonts/style.css">
 
   <!-- dependancies -->
   <link rel="stylesheet" href="bower_components/angular-spinkit/build/angular-spinkit.min.css">
@@ -16,7 +16,6 @@
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-animate/angular-animate.js"></script>
   <script src="bower_components/angular-spinkit/build/angular-spinkit.min.js"></script>
-  <script src="bower_components/angular-file-upload/angular-file-upload.js"></script>
   <link rel='stylesheet' href='bower_components/angular-loading-bar/build/loading-bar.min.css' type='text/css' media='all' />
   <script type='text/javascript' src='bower_components/angular-loading-bar/build/loading-bar.min.js'></script>
 
