OAuth production fix where Google OAuth was sending params to the wrong url

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <meta charset="UTF-8">
   <title>Realtime Storage Application</title>
 
+  <!-- be sure to set this to your root url -->
+  <base href="http://tomchinery.com/rtds/" target="_blank">
+
   <!-- stylesheets -->
   <link rel="stylesheet" href="./app/assets/main.css">
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,600italic,400italic,300italic' rel='stylesheet' type='text/css'>
@@ -28,7 +31,6 @@
   <script src="app/services/GDocsService.js"></script>
   <script src="app/filters/dateFilter.js"></script>
   <script src="app/directives/fileDirective.js"></script>
-
 
 </head>
   <body ng-app="rtStorage">
